tests/e2e/not_allowed/interface.error
Error: syntax error in story at line 1, column 1

1|    interface = 1
      ^^^^^^^^^

E0030: `interface` is reserved for future use
